--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "dotenv": "^8.2.0",
     "python-shell": "^0.5.0"
   }
 }
