--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Thomas knows everything",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./index.js",
+    "start": "node ./index.js"
   },
   "author": "ThomasDieKatze",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2",
+    "discord.js": "^12.5.1",
+    "@discordjs/opus": "^0.3.3",
     "dotenv": "^8.2.0",
-    "python-shell": "^0.5.0"
+    "python-shell": "^0.5.0",
+    "google-tts-api": "^2.0.0",
+    "@greencoast/logger": "^1.0.1"
   }
 }
