--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,18 +22,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Install Heroku CLI
-        run: curl https://cli-assets.heroku.com/install.sh | sh
-      
-      - name: Install fake SSH keys
-        run: ssh-keygen -t rsa -f ~/.ssh/id_rsa
-
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
-      - name: Deploy to Heroku
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        run: |
-          heroku git:remote -a thomas-die-katze-bot
-          git push heroku master
+
+      - uses: akhileshns/heroku-deploy@v3.8.9 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: thomas-die-katze-bot # Must be unique in Heroku
+          heroku_email: xz1133@nyu.edu
