--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,8 +25,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - uses: akhileshns/heroku-deploy@v3.8.9 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: thomas-die-katze-bot # Must be unique in Heroku
-          heroku_email: xz1133@nyu.edu
+      - name: Deploy to Heroku
+        env:
+          HEROKU_API_KEY: ${{secrets.HEROKU_API_KEY}}
+        run: |
+          heroku container:login
+          docker build . -t registry.heroku.com/thomas-die-katze-bot/worker
+          docker push registry.heroku.com/thomas-die-katze-bot/worker
+          docker pull nginx
+          docker tag nginx registry.heroku.com/thomas-die-katze-bot/web
+          docker push registry.heroku.com/thomas-die-katze-bot/web
