--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "ThomasDieKatze",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
     "@discordjs/opus": "^0.3.3",
+    "@greencoast/logger": "^1.0.1",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "python-shell": "^0.5.0",
     "google-tts-api": "^2.0.0",
-    "@greencoast/logger": "^1.0.1"
+    "python-shell": "^0.5.0",
+    "yargs": "^16.2.0"
   }
 }
